# fix_33_header_zip_tool

./: CMakeLists.txt  FixChineseCompressZip.1sc  LICENSE  main.cpp  main_flow.cpp  readme.md  test.cpp
manga_lib/: CMakeLists.txt  binary_manipulation.cpp  binary_manipulation.h  check_file_magic.cpp  check_file_magic.h  check_header_util.cpp  check_header_util.h  file_util.cpp  file_util.h  read_files.cpp  read_files.h
